# medtronic_task

./: CMakeLists.txt  Dockerfile  README.md  docker_helper.sh
.github/workflows/: cmake-single-platform.yml
medtronic_task/: remote_logger.hpp  sensor.hpp  socket.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  mock_socket.hpp  test_remote_logger.cpp
